# USBFlaherAndroid

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  gradle.properties  performance-strategy.md  settings.gradle.kts
androidusbflasher/: build.gradle.kts  consumer-rules.pro  gradle.properties  proguard-rules.pro
androidusbflasher/rust-lib/: Cargo.toml  build-android.sh
androidusbflasher/rust-lib/crates/hyntix-common/: Cargo.toml
androidusbflasher/rust-lib/crates/hyntix-common/src/: lib.rs
androidusbflasher/rust-lib/crates/hyntix-fat32/: Cargo.toml
androidusbflasher/rust-lib/crates/hyntix-fat32/src/: format.rs  gpt.rs  lib.rs  writer.rs
androidusbflasher/rust-lib/crates/hyntix-iso/: Cargo.toml
androidusbflasher/rust-lib/crates/hyntix-iso/src/: lib.rs  reader.rs
androidusbflasher/rust-lib/crates/hyntix-linux/: Cargo.toml
androidusbflasher/rust-lib/crates/hyntix-linux/src/: lib.rs
androidusbflasher/rust-lib/crates/hyntix-udf/: Cargo.toml
androidusbflasher/rust-lib/crates/hyntix-udf/src/: lib.rs
androidusbflasher/rust-lib/crates/hyntix-usb/: Cargo.toml
androidusbflasher/rust-lib/crates/hyntix-usb-flasher/: Cargo.toml
androidusbflasher/rust-lib/crates/hyntix-usb-flasher-jni/: Cargo.toml
androidusbflasher/rust-lib/crates/hyntix-usb-flasher-jni/src/: lib.rs
androidusbflasher/rust-lib/crates/hyntix-usb-flasher/src/: config.rs  lib.rs
androidusbflasher/rust-lib/crates/hyntix-usb/src/: async_writer.rs  cbw.rs  check_bits  check_bits.c  check_ioctls  check_ioctls.c  config.rs  csw.rs  lib.rs  mass_storage.rs  native.rs  scsi.rs
androidusbflasher/rust-lib/crates/hyntix-wim/: Cargo.toml
androidusbflasher/rust-lib/crates/hyntix-wim/src/: lib.rs
androidusbflasher/rust-lib/crates/hyntix-windows/: Cargo.toml
androidusbflasher/rust-lib/crates/hyntix-windows-cli/: Cargo.toml
androidusbflasher/rust-lib/crates/hyntix-windows-cli/src/: main.rs
androidusbflasher/rust-lib/crates/hyntix-windows/src/: lib.rs
androidusbflasher/src/androidTest/java/com/hyntix/lib/androidusbflasher/: ExampleInstrumentedTest.kt
androidusbflasher/src/main/java/com/hyntix/lib/androidusbflasher/: AndroidUsbFlasher.kt  UsbDeviceScanner.kt  UsbFlasherNative.kt
androidusbflasher/src/test/java/com/hyntix/lib/androidusbflasher/: ExampleUnitTest.kt
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/dev/libretools/android/usbflaher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hyntix/android/usbflasher/: MainActivity.kt
app/src/main/java/com/hyntix/android/usbflasher/data/: FlashState.kt
app/src/main/java/com/hyntix/android/usbflasher/domain/: FlashRepository.kt
app/src/main/java/com/hyntix/android/usbflasher/ui/: FlashViewModel.kt  LogViewerScreen.kt  MainScreen.kt  UiComponents.kt
app/src/main/java/com/hyntix/android/usbflasher/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/hyntix/android/usbflasher/util/: AppLogger.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_splash_logo_dark.xml  ic_splash_logo_white.xml  logo.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/dev/libretools/android/usbflaher/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
