[workspace]
members = [
    "crates/hyntix-common",
    "crates/hyntix-iso",
    "crates/hyntix-fat32",
    "crates/hyntix-usb",
    "crates/hyntix-linux",
    "crates/hyntix-usb-flasher",
    "crates/hyntix-usb-flasher-jni",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Hyntix <dev@hyntix.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"
repository = "https://github.com/HyntixHQ/usb-flasher"

[workspace.dependencies]
thiserror = "2.0"
libc = "0.2"
nom = "7.1"
byteorder = "1.5"
log = "0.4"
unicode-normalization = "0.1"
crc = "3.2"
sha2 = "0.10"
crossbeam-channel = "0.5"
uuid = { version = "1.11", features = ["v4"] }
jni = "0.21"
android_logger = "0.14"
tempfile = "3.10"
env_logger = "0.11"

# Internal crates
hyntix-common = { path = "crates/hyntix-common" }
hyntix-iso = { path = "crates/hyntix-iso" }
hyntix-fat32 = { path = "crates/hyntix-fat32" }
hyntix-usb = { path = "crates/hyntix-usb" }
hyntix-linux = { path = "crates/hyntix-linux" }
hyntix-usb-flasher = { path = "crates/hyntix-usb-flasher" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = false
