[workspace]
members = [
    "crates/hyntix-common",
    "crates/hyntix-iso",
    "crates/hyntix-fat32",
    "crates/hyntix-usb",
    "crates/hyntix-linux",
    "crates/hyntix-usb-flasher",
    "crates/hyntix-usb-flasher-jni",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Hyntix <dev@hyntix.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"
repository = "https://github.com/HyntixHQ/usb-flasher"

[workspace.dependencies]
thiserror = "2.0.18"
libc = "0.2.184"
nom = "7.1.3"
byteorder = "1.5.0"
log = "0.4.29"
unicode-normalization = "0.1.25"
crc = "3.4.0"
sha2 = "0.10.9"
crossbeam-channel = "0.5.15"
uuid = { version = "1.23.0", features = ["v4"] }
jni = "0.21.1"
android_logger = "0.14.1"
tempfile = "3.27.0"
env_logger = "0.11.10"

# Internal crates
hyntix-common = { path = "crates/hyntix-common" }
hyntix-iso = { path = "crates/hyntix-iso" }
hyntix-fat32 = { path = "crates/hyntix-fat32" }
hyntix-usb = { path = "crates/hyntix-usb" }
hyntix-linux = { path = "crates/hyntix-linux" }
hyntix-usb-flasher = { path = "crates/hyntix-usb-flasher" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = false
