[workspace]
members = [
    "crates/hyntix-common",
    "crates/hyntix-iso",
    "crates/hyntix-fat32",
    "crates/hyntix-usb",
    "crates/hyntix-linux",
    "crates/hyntix-usb-flasher",
    "crates/hyntix-usb-flasher-jni", "crates/hyntix-udf", "crates/hyntix-wim", "crates/hyntix-windows", "crates/hyntix-windows-cli",
]
resolver = "2"

[workspace.package]
version = "1.0.2"
authors = ["Hyntix <dev@hyntix.com>"]
license = "AGPL-3.0-or-later"
edition = "2024"
repository = "https://github.com/HyntixHQ/USBFlaherAndroid"

[workspace.dependencies]
thiserror = "2.0.18"
libc = "0.2.184"
nom = "7.1.3"

unicode-normalization = "0.1.25"
crc = "3.4.0"
crossbeam-channel = "0.5.15"
uuid = { version = "1.23.4", features = ["v4"] }

blake3 = "1.8.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-android = "0.2.0"
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
zerocopy = { version = "0.8.52", features = ["derive"] }
uniffi = { version = "0.31.2", features = ["cli", "build"] }

# Internal crates
hyntix-common = { path = "crates/hyntix-common" }
hyntix-iso = { path = "crates/hyntix-iso" }
hyntix-fat32 = { path = "crates/hyntix-fat32" }
hyntix-usb = { path = "crates/hyntix-usb" }
hyntix-linux = { path = "crates/hyntix-linux" }
hyntix-usb-flasher = { path = "crates/hyntix-usb-flasher" }
hyntix-udf = { path = "crates/hyntix-udf" }
hyntix-wim = { path = "crates/hyntix-wim" }
hyntix-windows = { path = "crates/hyntix-windows" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = false
panic = "abort"
