[package]
name = "hyntix-fat32"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hyntix-common = { workspace = true }

tracing.workspace = true
crc.workspace = true
uuid.workspace = true
unicode-normalization.workspace = true
hyntix-usb = { workspace = true }
zerocopy = { workspace = true }
