[package]
name = "hyntix-usb-flasher-jni"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "usbflasher"
crate-type = ["cdylib"]

[dependencies]
hyntix-usb-flasher = { workspace = true }
hyntix-usb = { workspace = true }
hyntix-common = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
uniffi = { workspace = true }
thiserror.workspace = true
libc.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
tracing-android.workspace = true


[build-dependencies]
uniffi = { workspace = true }
