[package]
name = "hyntix-usb-flasher"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "hyntix_usb_flasher"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
hyntix-common = { workspace = true }
hyntix-iso = { workspace = true }
hyntix-usb = { workspace = true }
hyntix-windows = { workspace = true }
hyntix-udf = { workspace = true }
crossbeam-channel.workspace = true
blake3.workspace = true
tracing.workspace = true



