[package]
name = "hyntix-windows-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
hyntix-udf = { workspace = true }
hyntix-wim = { workspace = true }
hyntix-windows = { workspace = true }
hyntix-usb = { workspace = true }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
