[package]
name = "hyntix-windows"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
hyntix-udf = { workspace = true }
hyntix-wim = { workspace = true }
hyntix-fat32 = { workspace = true }
hyntix-usb = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
